--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -11,7 +11,7 @@ $black: #000;
 $darkerGray: #222;
 $darkGray: #333;
 $gray: #666;
-$green: #70A764;
+$green: #619356;
 $lightGray: #eee;
 $lighterGray: #F1F1F1;
 $white: #fff;
