--- a/style.scss
+++ b/style.scss
@@ -47,6 +47,7 @@ h1 {
   font-size: 30px;
   text-align: center;
   text-transform: uppercase;
+  font-weight: 200;
   a {
     color: inherit;
   }
