--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -20,6 +20,7 @@ $white: #fff;
 $helvetica: Helvetica, Verdana, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Verdana, sans-serif;
 $proximaNova: Proxima Nova, Helvetica, Verdana, sans-serif;
+$gotham: Gotham, Helvetica, Verdana, sans-serif;
 
 // Mobile breakpoints
 @mixin mobile {
