--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
 	background: $lighterGray;
-  font: 18px/1.4 $proximaNova;
+  font: 18px/1.4 $gotham;
   color: $darkGray;
 }
 
@@ -204,7 +204,7 @@ img {
   cursor: pointer;
   font-family: $helveticaNeue;
   font-weight: 300;
-  font-size: 40px;
+  font-size: 44px;
   letter-spacing: 1px;
 }
 
