--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,8 @@
         </header>
       </div>
     </div>
+    
+    <hr class="brace">
 
     <div id="main" role="main" class="container">
       {{ content }}
