--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,10 @@
 
 @import "reset";
 @import "variables";
+@import "nib"
+
+$brace-color = white;
+
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
