--- a/style.scss
+++ b/style.scss
@@ -188,7 +188,7 @@ img {
   
   &:after {
     width: 50%;
-    border-top: 5px solid $brace-color;
+    border-top: 5px solid white;
     border-right: 1px solid transparent; /* play with this until you like the look of it */
     border-top-right-radius: 20% 30px;
     height: 100%;
