--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,7 @@
 
 @import "reset";
 @import "variables";
-@import "nib"
+@import "nib";
 
 // Syntax highlighting @import is at the bottom of this file
 
