--- a/style.scss
+++ b/style.scss
@@ -164,8 +164,8 @@ img {
   border: none;
   background-color: transparent;
   background-image: 
-    radial-gradient(circle at 0 0, rgba($brace-color,0) 14.5px, $brace-color 15.5px, $brace-color 19.5px, rgba($brace-color,0) 20.5px),
-    radial-gradient(circle at 35px 0, rgba($brace-color,0) 14.5px, $brace-color 15.5px, $brace-color 19.5px, rgba($brace-color,0) 20.5px);
+    radial-gradient(circle at 0 0, rgba(white,0) 14.5px, white 15.5px, white 19.5px, rgba(white,0) 20.5px),
+    radial-gradient(circle at 35px 0, rgba(white,0) 14.5px, white 15.5px, white 19.5px, rgba(white,0) 20.5px);
   background-size: 35px 20px;
   background-position: center bottom;
   background-repeat: no-repeat;
