--- a/style.scss
+++ b/style.scss
@@ -181,7 +181,7 @@ img {
     border-top-left-radius: 20% 30px;
     height: 100%;
     content: "";
-    absolute: top @height left -15px;
+//    absolute: top left -15px;
     box-sizing: border-box;
     margin-top: -5px;
   }
@@ -193,7 +193,7 @@ img {
     border-top-right-radius: 20% 30px;
     height: 100%;
     content: "";
-    absolute: top @height right -15px;
+//    absolute: top @height right -15px;
     box-sizing: border-box;
     margin-top: -5px;
   }
