--- a/style.scss
+++ b/style.scss
@@ -256,6 +256,17 @@ img {
   font-weight: 300;
   font-size: 50px;
   letter-spacing: 1px;
+  text-shadow: #EDEDED 3px 2px 0;
+}
+.site-name:after {
+  background: url(https://subtlepatterns.com/patterns/crossed_stripes.png) repeat;
+  background-image: -webkit-linear-gradient(left top, transparent 0%, transparent 25%, #555 25%, #555 50%, transparent 50%, transparent 75%, #555 75%);
+  background-size: 4px 4px;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  z-index: -5;
+  display: block;
+  text-shadow: none;
 }
 
 .site-description {
