--- a/style.scss
+++ b/style.scss
@@ -149,54 +149,6 @@ img {
     clear: both;
 }
 
-//curly brace hr code
-.brace {
-  width: auto;
-  min-width: 35px;
-  padding-bottom: 20px;
-  font-size: 2em;
-  line-height: 2em;
-  position: relative;
-  text-align: center;
-  vertical-align: middle;
-  margin: 0 15px 15px;
-  border: none;
-  background-color: transparent;
-  background-image: 
-    radial-gradient(circle at 0 0, rgba(white,0) 14.5px, white 15.5px, white 19.5px, rgba(white,0) 20.5px),
-    radial-gradient(circle at 35px 0, rgba(white,0) 14.5px, white 15.5px, white 19.5px, rgba(white,0) 20.5px);
-  background-size: 35px 20px;
-  background-position: center bottom;
-  background-repeat: no-repeat;
-  text-transform: lowercase;
-  font-style: italic;
-  color: white;
-  filter: drop-shadow(0 1px 1px rgba(black,.15));
-  
-  &:before {
-    width: 50%;
-    border-top: 5px solid white;
-    border-left: 1px solid transparent;
-    border-top-left-radius: 20% 30px;
-    height: 100%;
-    content: "";
-    absolute: top left -15px;
-    box-sizing: border-box;
-    margin-top: -5px;
-  }
-  
-  &:after {
-    width: 50%;
-    border-top: 5px solid white;
-    border-right: 1px solid transparent;
-    border-top-right-radius: 20% 30px;
-    height: 100%;
-    content: "";
-    absolute: top right -15px;
-    box-sizing: border-box;
-    margin-top: -5px;
-  }
-}
 
 /*********************/
 /* LAYOUT / SECTIONS */
@@ -212,7 +164,7 @@ img {
 
 .masthead {
   padding: 20px 0;
-//  border-bottom: 1px solid $gray;
+  border-bottom: 1px solid $gray;
 
   @include mobile {
     text-align: center;
