--- a/style.scss
+++ b/style.scss
@@ -286,6 +286,7 @@ nav {
   }
 
   .read-more {
+    text-align: center;
     text-transform: uppercase;
     font-size: 15px;
   }
@@ -293,9 +294,9 @@ nav {
 
 .wrapper-footer {
   margin-top: 50px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  background-color: $gray;
+  border-top: 1px solid $green;
+  border-bottom: 1px solid $green;
+  background-color: $green;
 }
 
 footer {
