--- a/style.scss
+++ b/style.scss
@@ -289,10 +289,11 @@ nav {
     text-align: center;
     text-transform: uppercase;
     font-size: 15px;
+    color: black;
   }
 }
 
-.wrapper-footer {
+/* .wrapper-footer {
   margin-top: 50px;
   border-top: 1px solid $green;
   border-bottom: 1px solid $green;
@@ -302,7 +303,7 @@ nav {
 footer {
   padding: 20px 0;
   text-align: center;
-}
+} */
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
