--- a/style.scss
+++ b/style.scss
@@ -164,7 +164,7 @@ img {
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid $gray;
+  border-bottom: 4px double #AAA;
 
   @include mobile {
     text-align: center;
@@ -206,7 +206,7 @@ img {
   cursor: pointer;
   font-family: $helveticaNeue;
   font-weight: 300;
-  font-size: 50px;
+  font-size: 75px;
   letter-spacing: 1px;
   text-shadow: #EDEDED 3px 2px 0;
 }
