--- a/style.scss
+++ b/style.scss
@@ -289,8 +289,16 @@ nav {
     text-align: center;
     text-transform: uppercase;
     font-size: 15px;
-    color: black;
+    color: $green;
   }
+}
+
+button {
+	border: 1px solid $gray;
+	border-radius: 5px;
+	padding: 5px;
+	background: $gray;
+	color: $green;
 }
 
 /* .wrapper-footer {
