--- a/style.scss
+++ b/style.scss
@@ -28,11 +28,11 @@ body {
   margin: 0 auto;
 //  max-width: 740px;
   padding: 0 10px;
-  width: 100%;
+  width: 75;
 }
 
 div#main {
-	width: 75%
+	width: 100%
 	margin: 0 auto;
 	padding: 0 10px;
 }
