--- a/style.scss
+++ b/style.scss
@@ -28,13 +28,11 @@ body {
   margin: 0 auto;
 //  max-width: 740px;
   padding: 0 10px;
-  width: 75%;
+  width: 100%;
 }
 
-div#main {
-	width: 100%
-	margin: 0 auto;
-	padding: 0 10px;
+div#main.container {
+	width: 75%
 }
 
 h1, h2, h3, h4, h5, h6 {
