--- a/style.scss
+++ b/style.scss
@@ -31,6 +31,10 @@ body {
   width: 100%;
 }
 
+div#main.container{
+  width: 65%;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   color: $darkerGray;
