--- a/style.scss
+++ b/style.scss
@@ -164,7 +164,7 @@ img {
 //
 
 .wrapper-masthead {
-  background: white;
+  background: black;
   margin-bottom: 20px;
 }
 
@@ -209,7 +209,7 @@ img {
   margin: 0;
   text-align: left;
   text-transform: none;
-  color: $darkGray;
+  color: white;
   cursor: pointer;
   font-weight: 600;
   font-size: 70px;
@@ -223,7 +223,7 @@ img {
 
 .site-description {
   margin: -15px 0 0 5px;
-  color: $gray;
+  color: $lightestGray;
   font-size: 16px;
 
   @include mobile {
