--- a/style.scss
+++ b/style.scss
@@ -222,7 +222,7 @@ img {
 }
 
 .site-description {
-  margin: -15px 0 0 5px;
+  margin: -15px 0 10px 5px;
   color: $lighterGray;
   font-size: 16px;
 
