--- a/style.scss
+++ b/style.scss
@@ -164,7 +164,7 @@ img {
 //
 
 .wrapper-masthead {
-  background: $darkerGray;
+  background: $darkGray;
   margin-bottom: 10px;
 }
 
@@ -214,7 +214,7 @@ img {
   font-weight: 600;
   font-size: 70px;
   letter-spacing: 1px;
-  text-shadow: $white 3px 2px 0;
+  text-shadow: $lighterGray 3px 2px 0;
 	@font-face {
 	font-family: Arcade Classic;
 	src: url('/ARCADECLASSIC.woff');
