--- a/style.scss
+++ b/style.scss
@@ -164,7 +164,7 @@ img {
 //
 
 .wrapper-masthead {
-  background: $darkGray;
+  background: $gray;
   margin-bottom: 10px;
 }
 
@@ -214,7 +214,7 @@ img {
   font-weight: 600;
   font-size: 70px;
   letter-spacing: 1px;
-  text-shadow: $lighterGray 3px 2px 0;
+  text-shadow: $darkGray 3px 2px 0;
 	a{
 		color: $lighterGray;
 	}
