--- a/style.scss
+++ b/style.scss
@@ -164,7 +164,7 @@ img {
 //
 
 .wrapper-masthead {
-  background: $gray;
+  background: $darkGray;
   margin-bottom: 10px;
 }
 
@@ -214,7 +214,7 @@ img {
   font-weight: 600;
   font-size: 70px;
   letter-spacing: 1px;
-  text-shadow: $darkGray 3px 2px 0;
+  text-shadow: $darkerGray 3px 2px 0;
 	a{
 		color: $lighterGray;
 		  &:hover, &:active {
@@ -229,7 +229,7 @@ img {
 
 .site-description {
   margin: -15px 0 10px 5px;
-  color: $lighterGray;
+  color: $lightGray;
   font-size: 16px;
 
   @include mobile {
