--- a/style.scss
+++ b/style.scss
@@ -179,7 +179,7 @@ img {
 }
 
 .site-avatar {
-  float: left;
+//  float: left;
   width: 90px;
   height: 90px;
   margin-top: 30px;
@@ -208,7 +208,7 @@ img {
 
 .site-name {
   margin: 0;
-  text-align: left;
+  text-align: center;
   text-transform: none;
   color: $lighterGray;
   cursor: pointer;
