--- a/style.scss
+++ b/style.scss
@@ -229,7 +229,8 @@ img {
 }
 
 .site-description {
-  margin: -15px 0 10px 5px;
+  margin: -15px 0 0 0;
+  text-align: center;
   color: $lightGray;
   font-size: 16px;
 
