--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,10 @@
     <div id="main" role="main" class="container">
       {{ content }}
     </div>
+    
+    <div id="sidebar" class="container">
+      test
+      <div>
 
 <!--    <div class="wrapper-footer">
       <div class="container">
