--- a/style.scss
+++ b/style.scss
@@ -34,13 +34,13 @@ body {
 div#main.container{
   width: 70%;
   float: left;
-  padding: 0 15px 0 30px;
+  padding: 0 30px;
 }
 
 div#sidebar.container{
 	width: 30%;
 	float: right;
-	padding: 0 15px 0 30px;
+	padding: 0 30px;
 }
 
 h1, h2, h3, h4, h5, h6 {
