--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
     
     <div id="sidebar" class="container">
       test
-      <div>
+      </div>
 
 <!--    <div class="wrapper-footer">
       <div class="container">
