--- a/style.scss
+++ b/style.scss
@@ -191,6 +191,7 @@ img {
   height: 90px;
   margin-top: 30px;
   margin-right: 15px;
+  margin-left: 250px;
 
   @include mobile {
     float: none;
