--- a/style.scss
+++ b/style.scss
@@ -262,11 +262,11 @@ img {
 }
 
 nav {
-  display: block;
-  float: none;
+  float: right;
   font-family: $helveticaNeue;
   font-weight: 350;
   font-size: 20px;
+  margin: -150px 0 0 0;
 
   @include mobile {
     float: none;
