--- a/style.scss
+++ b/style.scss
@@ -199,11 +199,10 @@ img {
 }
 
 .site-avatar {
-  display: inline;
-  margin-top: 30px;
-  margin-right: 15px;
-  max-width: 90px;
-  max-height: 90px;
+  position: absolute;
+  top: 100px; right: 10px;
+  max-width: 50px;
+  max-height: 50px;
 
   @include mobile {
     position: static;
