--- a/style.scss
+++ b/style.scss
@@ -201,8 +201,8 @@ img {
 .site-avatar {
   position: absolute;
   top: 100px; right: 10px;
-  max-width: 50px;
-  max-height: 50px;
+  max-width: 60px;
+  max-height: 60px;
 
   @include mobile {
     position: static;
@@ -213,6 +213,20 @@ img {
 
   img {
     border-radius: 5px;
+  }
+}
+
+.avatar-speech {
+  position: absolute;
+  top: 50px; right: 70px;
+  max-width: 50px;
+  max-height: 50px;
+
+  @include mobile {
+    position: static;
+    float: none;
+    display: block;
+    margin: 0 auto;
   }
 }
 
@@ -265,7 +279,7 @@ nav {
   font-family: $helveticaNeue;
   font-weight: 350;
   font-size: 20px;
-  margin: -150px 0 0 0;
+  margin: -125px 0 0 0;
 
   @include mobile {
     float: none;
