--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,8 @@
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
+          <img class="avatar-speech"/>
+          <img class="site-avatar" src="{{ site.avatar }}" />
 
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
