--- a/style.scss
+++ b/style.scss
@@ -199,7 +199,6 @@ img {
 }
 
 .site-avatar {
-  content:url("http://imgur.com/SZ8Cm.jpg");
   position: absolute;
   top: 100px; right: 10px;
   max-width: 60px;
@@ -218,6 +217,7 @@ img {
 }
 
 .avatar-speech {
+  content:url("http://hliutongco.github.io/images/beepboop.png");
   position: absolute;
   top: 50px; right: 70px;
   max-width: 50px;
