--- a/style.scss
+++ b/style.scss
@@ -258,10 +258,10 @@ img {
     			color: $lighterGray;
 		}
 	}
-/*	@font-face {
+	@font-face {
 	font-family: Arcade Classic;
 	src: url('/ARCADECLASSIC.woff');
-	} */
+	}
 }
 
 .site-description {
