--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
     </div>
     
     <div id="sidebar" class="container">
-      test
+      <h2>test</h2>
       </div>
 
 <!--    <div class="wrapper-footer">
