--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,9 @@
     </div>
     
     <div id="sidebar" class="container">
-      <h3>test</h3>
+      <h3>About The Girl</h3>
+      <img class="author-pic"/>
+      <p class="about-author"></p>
       </div>
 
 <!--    <div class="wrapper-footer">
