--- a/style.scss
+++ b/style.scss
@@ -267,6 +267,15 @@ img {
 	}
 }
 
+.site-name:before {
+  content: "<";
+  font-family: $helveticaNeue;
+  font-weight: 600;
+  font-size: 80px;
+  color: $gray;
+  text-shadow: $darkerGray 3px 2px 0;
+}
+
 .site-description {
   margin: -15px 0 0 0;
   text-align: center;
