--- a/style.scss
+++ b/style.scss
@@ -53,7 +53,7 @@ div#main.container{
 }
 
 div#sidebar.container{
-background: $lightGray;
+background: $gray;
 display: inline;
 width: 30%;
 float: right;
