--- a/style.scss
+++ b/style.scss
@@ -366,7 +366,8 @@ button {
 //
 
 .author-pic {
-  content:url("http://hliutongco.github.io/images/beepboop.png");
+  content:url("hliutongco.github.io/helen_avatar.png");
+  max-height: 200px;
 }
 
 /* .wrapper-footer {
