--- a/style.scss
+++ b/style.scss
@@ -269,6 +269,7 @@ img {
 
 .site-name:before {
   content: "<";
+  margin-bottom: 10px;
   margin-right: 5px;
   font-family: $helveticaNeue;
   font-weight: 600;
