--- a/style.scss
+++ b/style.scss
@@ -53,7 +53,7 @@ div#main.container{
 }
 
 div#sidebar.container{
-background: $white;
+background: $lightGray;
 display: inline;
 width: 30%;
 float: right;
@@ -294,7 +294,7 @@ nav {
   font-family: $helveticaNeue;
   font-weight: 350;
   font-size: 20px;
-  margin: -140px 0 0 0;
+  margin: -145px 0 0 0;
 
   @include mobile {
     float: none;
@@ -368,7 +368,8 @@ button {
 
 .author-pic {
   content:url("hliutongco.github.io/helen_avatar.png");
-  max-height: 200px;
+  max-height: 280px;
+  max-width: 264;
 }
 
 /* .wrapper-footer {
