--- a/style.scss
+++ b/style.scss
@@ -53,9 +53,10 @@ div#main.container{
 }
 
 div#sidebar.container{
+margin: 10px;
 background: $lightGray;
 display: inline;
-width: 30%;
+width: 25%;
 float: right;
 padding: 0 30px;
 
