--- a/style.scss
+++ b/style.scss
@@ -269,8 +269,7 @@ img {
 }
 
 .site-name:before {
-  content: "<";
-  margin-bottom: 20px;
+  content: "{";
   margin-right: 5px;
   font-family: $helveticaNeue;
   font-weight: 600;
