--- a/style.scss
+++ b/style.scss
@@ -369,7 +369,7 @@ button {
 .author-pic {
   content:url("hliutongco.github.io/helen_avatar.png");
   max-height: 280px;
-  max-width: 264;
+  max-width: 264px;
 }
 
 /* .wrapper-footer {
