--- a/style.scss
+++ b/style.scss
@@ -53,7 +53,7 @@ div#main.container{
 }
 
 div#sidebar.container{
-margin: 10px;
+margin: 10px 10px 0 0;
 background: $lightGray;
 display: inline;
 width: 25%;
