--- a/style.scss
+++ b/style.scss
@@ -270,6 +270,7 @@ img {
 
 .site-name:before {
   content: "{";
+  margin-bottom: 20px;
   margin-right: 5px;
   font-family: $helveticaNeue;
   font-weight: 600;
@@ -368,8 +369,8 @@ button {
 
 .author-pic {
   content:url("hliutongco.github.io/helen_avatar.png");
-  max-height: 280px;
-  max-width: 264px;
+  max-height: 210px;
+  max-width: 198px;
 }
 
 /* .wrapper-footer {
