--- a/style.scss
+++ b/style.scss
@@ -370,8 +370,9 @@ button {
 
 .author-pic {
   content:url("hliutongco.github.io/helen_avatar.png");
-  max-height: 210px;
-  max-width: 198px;
+  margin: 0 auto;
+  height: 210px;
+  width: 198px;
 }
 
 /* .wrapper-footer {
