--- a/style.scss
+++ b/style.scss
@@ -271,6 +271,7 @@ img {
 
 .site-name:before {
   content: "{";
+  vertical-align: middle;
   margin-bottom: 20px;
   margin-right: 5px;
   font-family: $helveticaNeue;
