--- a/style.scss
+++ b/style.scss
@@ -271,9 +271,8 @@ img {
 
 .site-name:before {
   content: "{";
-  vertical-align: middle;
-  margin-bottom: 20px;
-  margin-right: 5px;
+  position: relative;
+  top: -20px; right: 5px;
   font-family: $helveticaNeue;
   font-weight: 600;
   font-size: 80px;
@@ -372,6 +371,7 @@ button {
 .author-pic {
   content:url("hliutongco.github.io/helen_avatar.png");
   margin: 0 auto;
+  padding: 0;
   height: 210px;
   width: 198px;
 }
