--- a/style.scss
+++ b/style.scss
@@ -42,7 +42,7 @@ body {
 div#main.container{
   width: 70%;
   float: left;
-  padding: 0 10px 0 30px;
+  padding: 0 0 0 30px;
 
   @include mobile {
     float: none;
