--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -12,6 +12,7 @@ $darkerGray: #222;
 $darkGray: #333;
 $gray: #666;
 $green: #619356;
+$sidebarGray: #D9D9D9;
 $lightGray: #eee;
 $lighterGray: #F1F1F1;
 $white: #fff;
