--- a/style.scss
+++ b/style.scss
@@ -54,7 +54,7 @@ div#main.container{
 
 div#sidebar.container{
 margin: 10px 10px 0 0;
-background: $lightGray;
+background: $sidebarGray;
 display: inline;
 width: 25%;
 float: right;
