--- a/style.scss
+++ b/style.scss
@@ -52,7 +52,7 @@ div#main.container{
 
 }
 
-div#sidebar.container{
+div.sidebar{
 margin: 10px 10px 0 0;
 background: $sidebarGray;
 display: inline;
