--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Hme</a>
+            <a href="{{ site.baseurl }}/">Home</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
@@ -46,7 +46,8 @@
       <p class="about-author">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in ultrices leo, at iaculis turpis. Vestibulum aliquam velit ut orci dignissim lacinia. Pellentesque sit amet rhoncus urna. Vestibulum id lobortis turpis, vel blandit diam. Donec accumsan fringilla nisi nec imperdiet. Vestibulum venenatis tellus aliquam posuere commodo.</p>
       </div>
     
-    <!--<div class="sidebar"></div>-->
+    <div class="sidebar">
+    <h3>Current Project</h3></div>
 
 <!--    <div class="wrapper-footer">
       <div class="container">
