--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,7 @@
       {{ content }}
     </div>
     
+    <div id="column">
     <div class="sidebar">
       <h3>About The Girl</h3>
       <img class="author-pic"/>
@@ -48,6 +49,7 @@
     
     <div class="sidebar">
     <h3>Current Project</h3></div>
+    </div>
 
 <!--    <div class="wrapper-footer">
       <div class="container">
