--- a/style.scss
+++ b/style.scss
@@ -61,8 +61,8 @@ div#column{
 div.sidebar{
 margin: 10px 10px 0 0;
 background: $sidebarGray;
-display: inline;
-width: 25%;
+display: block;
+width: 90%;
 float: right;
 padding: 0 30px;
 
