--- a/style.scss
+++ b/style.scss
@@ -385,7 +385,7 @@ button {
 //
 
 .author-pic {
-  content:url("hliutongco.github.io/helen_avatar.png");
+  content:url("hliutongco.github.io/helen_avatar_bg.png");
   display: block;
   margin: 0 auto;
   height: 210px;
