--- a/style.scss
+++ b/style.scss
@@ -386,7 +386,7 @@ button {
 //
 
 .author-pic {
-  content:url("hliutongco.github.io/helen_avatar_bg.png");
+  content:url("http://hliutongco.github.io/images/helen_avatar_bg.png");
   display: block;
   margin: 0 auto;
   height: 210px;
