--- a/style.scss
+++ b/style.scss
@@ -394,6 +394,7 @@ button {
 }
 
 .sidebar-title {
+  text-align: center;
   text-transform: uppercase;
   border-bottom: 1px solid currentColor;
   display: inline-block;
