--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,12 +3,13 @@ layout: default
 ---
 
 <article class="post">
-
-  <div class="date">
-    {{ page.date | date: "%B %e, %Y" }}
-  </div>
   
   <h1>{{ page.title }}</h1>
+  
+  
+  <div class="date">
+    Written by Helen L. on {{ page.date | date: "%B %e, %Y" }}
+  </div>
   
   <div class="entry">
     {{ content }}
