--- a/style.scss
+++ b/style.scss
@@ -404,7 +404,7 @@ button {
 
   border-bottom: 1px solid currentColor;
   display: inline-block;
-  line-height: 0.85;
+//  line-height: 0.85;
 
   @include mobile {
     line-height: 1.4;
@@ -412,7 +412,8 @@ button {
 }
 
 .sidebar-title::first-letter {
-  font-size: 200%;
+  font-size: 175%;
+  text-align: center;
 }
 
 /* .wrapper-footer {
