--- a/style.scss
+++ b/style.scss
@@ -394,6 +394,10 @@ button {
   width: 198px;
 }
 
+p#about-author {
+  font-size: 14px;
+}
+
 .sidebar-title {
   text-transform: lowercase;
   font-family: $helveticaNeue;
