--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,13 +42,13 @@
     
     <div id="column">
     <div class="sidebar">
-      <h2 class="sidebar-title"><span class="sidebar-title-text">About The Girl</span></h2>
+      <h2 class="sidebar-title">About The Girl</h2>
       <img class="author-pic"/>
-      <p id="about-author">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in ultrices leo, at iaculis turpis. Vestibulum aliquam velit ut orci dignissim lacinia. Pellentesque sit amet rhoncus urna. Vestibulum id lobortis turpis, vel blandit diam. Donec accumsan fringilla nisi nec imperdiet. Vestibulum venenatis tellus aliquam posuere commodo.</p>
+      <p class="sidebar-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in ultrices leo, at iaculis turpis. Vestibulum aliquam velit ut orci dignissim lacinia. Pellentesque sit amet rhoncus urna. Vestibulum id lobortis turpis, vel blandit diam. Donec accumsan fringilla nisi nec imperdiet. Vestibulum venenatis tellus aliquam posuere commodo.</p>
       </div>
     
     <div class="sidebar">
-    <h2 class="sidebar-title"><span class="sidebar-title-text">Current Project</span></h2></div>
+    <h2 class="sidebar-title">Current Project</h2></div>
     </div>
 
 <!--    <div class="wrapper-footer">
