--- a/style.scss
+++ b/style.scss
@@ -34,7 +34,6 @@ body {
 
 .container {
   margin: 0 auto;
-//  max-width: 740px;
   padding: 0 20px;
   width: 90%;
 }
@@ -48,6 +47,7 @@ div#main.container{
     float: none;
     display: block;
     margin: 0 auto;
+    padding: 0 5px;
   }
 
 }
