--- a/style.scss
+++ b/style.scss
@@ -243,7 +243,7 @@ img {
 
   @include mobile {
     position: relative;
-    top: -25px; right: 20px;
+    top: 0; right: 20px;
     float: none;
     display: block;
     margin: 0 auto;
