--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,13 +51,13 @@
     <h2 class="sidebar-title">Current Project</h2></div>
     </div>
 
-<!--    <div class="wrapper-footer">
+    <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-          {% include svg-icons.html %}
+          <!--{% include svg-icons.html %}-->
         </footer>
       </div>
-    </div> -->
+    </div>
 
     {% include analytics.html %}
   </body>
