--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,6 +55,7 @@
     
     <div class="wrapper-footer">
       <footer class="footer">
+        Made using Jekyll Now | Hosted on Github Pages | Design by Helen L.
           <!--{% include svg-icons.html %}-->
       </footer>
    </div>
