--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
   </head>
 
   <body>
+   <div id="page-container">
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
@@ -53,5 +54,10 @@
     </div>
     {% include analytics.html %}
   
+    <div id="footer">
+      <p>Test</p>
+    </div>
+    
+   </div>
   </body>
 </html>
