--- a/style.scss
+++ b/style.scss
@@ -32,6 +32,16 @@ body {
   color: $darkGray;
 }
 
+ #page-container {
+    position: relative;
+    height: 100%;
+ }
+
+ #footer {
+    position: absolute;
+    bottom: 0;
+ }
+
 .container {
   margin: 0 auto;
   padding: 0 20px;
