--- a/style.scss
+++ b/style.scss
@@ -398,7 +398,7 @@ button {
   overflow: hidden; /* clearfix */
   margin-left: -1rem;
   margin-right: -1rem;
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: $gotham, Helvetica, Arial, sans-serif;
   color: #ccc;
   text-align: center;
 }
