--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,5 +15,20 @@ layout: default
     {{ content }}
   </div>
 
-  {% include disqus.html %}
+<div class="more-posts">
+  <h3>More Posts</h3>
+  <ul class="more-posts">
+    {% for post in site.posts limit:2 %}
+      <li>
+        <h4>
+          <a href="{{ post.url }}">
+            {{ post.title }}
+            <small>{{ post.date | date_to_string }}</small>
+          </a>
+        </h4>
+      </li>
+    {% endfor %}
+  </ul>
+</div>
+
 </article>
