--- a/style.scss
+++ b/style.scss
@@ -399,7 +399,7 @@ button {
   margin-left: -1rem;
   margin-right: -1rem;
   font-family: $gotham, Helvetica, Arial, sans-serif;
-  color: #ccc;
+  color: $darkGray;
   text-align: center;
 }
 
@@ -407,7 +407,7 @@ button {
 .pagination-item {
   display: block;
   padding: 1rem;
-  border: 1px solid #eee;
+  border: 1px solid $darkGray;
 }
 .pagination-item:first-child {
   margin-bottom: -1px;
@@ -415,7 +415,7 @@ button {
 
 /* Only provide a hover state for linked pagination items */
 a.pagination-item:hover {
-  background-color: #f5f5f5;
+  background-color: $darkGray;
 }
 
 @media (min-width: 30em) {
