--- a/style.scss
+++ b/style.scss
@@ -398,6 +398,7 @@ button {
   overflow: hidden; /* clearfix */
   margin-left: -1rem;
   margin-right: -1rem;
+  margin-bottom: 15px;
   font-family: $gotham, Helvetica, Arial, sans-serif;
   color: $darkGray;
   text-align: center;
