--- a/style.scss
+++ b/style.scss
@@ -392,13 +392,14 @@ button {
 */
 
 div.more-posts {
+  padding: 20px 5px;
   margin: 20px 0;
   background: $sidebarGray;
 }
 
 li.more-posts {
   margin: 0 auto;
-  width:100%;
+  width: 100%;
 }
 
 /*
