--- a/style.scss
+++ b/style.scss
@@ -74,6 +74,11 @@ padding: 0 30px;
   }
 }
 
+div#footer{
+  position: absolute;
+  bottom: 0;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   text-align: center;
