--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,8 @@ layout: default
     {{ content }}
   </div>
 
+</article>
+
 <div class="more-posts">
   <h3>More Posts</h3>
   <ul>
@@ -30,4 +32,4 @@ layout: default
   </ul>
 </div>
 
-</article>
+<div id="footer">test</div>
