--- a/style.scss
+++ b/style.scss
@@ -402,9 +402,9 @@ div.more-posts {
   background: $sidebarGray;
 }
 
-li.more-posts {
-  margin: 0 auto;
-  width: 100%;
+p.more-posts {
+  text-align: center;
+  text-decoration: underline;
 }
 
 /*
