--- a/style.scss
+++ b/style.scss
@@ -402,7 +402,7 @@ div.more-posts {
   background: $sidebarGray;
 }
 
-p.more-posts {
+a.more-posts {
   text-align: center;
   text-decoration: underline;
 }
