--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
 </article>
 
 <div class="more-posts">
-  <h3>More Posts</h3>
+  <h3>You might also like...</h3>
     {% for post in site.posts limit:3 %}
         <h4>
           <a class="more-posts" href="{{ post.url }}">
