--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<div id="footer-container">
 <article class="post">
   
   <h1>{{ page.title }}</h1>
@@ -29,3 +29,4 @@ layout: default
 </div>
 
 <div id="footer">test</div>
+</div>
