--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,12 +1,15 @@
 ---
 layout: default
 ---
+<div id="footer-container">
+  <article class="page">
 
-<article class="page">
+    <h1>{{ page.title }}</h1>
 
-  <h1>{{ page.title }}</h1>
-
-  <div class="entry">
-    {{ content }}
-  </div>
-</article>
+    <div class="entry">
+     {{ content }}
+    </div>
+  </article>
+  
+  <div id="footer">test</div>
+</div>
