--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,10 @@
       </div>
     
       <div class="sidebar">
-        <h2 class="sidebar-title">Current Project</h2></div>
+        <h2 class="sidebar-title">Current Project</h2>
+        <img class="project-pic"/>
+        <h4><a href="/" target="_blank">Tic-Tac-Toe</h4>
+        <p class="sidebar-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
     </div>
     {% include analytics.html %}
