--- a/style.scss
+++ b/style.scss
@@ -477,6 +477,12 @@ a.pagination-item:hover {
   width: 198px;
 }
 
+.project-pic {
+  content:url("");
+  display: block;
+  margin: 0 auto;
+}
+
 .sidebar-text {
   font-size: 15px;
   	@include mobile {
