--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
       <div class="sidebar">
         <h2 class="sidebar-title">Current Project</h2>
         <img class="project-pic"/>
-        <h4><a href="/" target="_blank">Tic-Tac-Toe</h4>
+        <h4><a href="/" target="_blank">Tic-Tac-Toe</a></h4>
         <p class="sidebar-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
     </div>
