--- a/style.scss
+++ b/style.scss
@@ -478,9 +478,11 @@ a.pagination-item:hover {
 }
 
 .project-pic {
-  content:url("");
+  content:url("http://hliutongco.github.io/images/tic_tac_toe.png");
   display: block;
   margin: 0 auto;
+  height: 250px;
+  width: 222px;;
 }
 
 .sidebar-text {
