--- a/style.scss
+++ b/style.scss
@@ -404,7 +404,9 @@ button {
 div.more-posts {
   padding: 20px 5px;
   margin: 20px 0;
-  background: $sidebarGray;
+  background: $lighterGray;
+  border: 5px solid $gray;
+  border-radius: 5px;
 }
 
 a.more-posts {
