--- a/style.scss
+++ b/style.scss
@@ -405,7 +405,7 @@ div.more-posts {
   padding: 20px 5px;
   margin: 20px 0;
   background: $lighterGray;
-  border: 5px solid $gray;
+  border: 10px solid $sidebarGray;
   border-radius: 5px;
 }
 
