--- a/style.scss
+++ b/style.scss
@@ -404,7 +404,7 @@ button {
 div.more-posts {
   padding: 20px 5px;
   margin: 20px 0;
-  background: $lightGray;
+  background: $lighterGray;
   border: 10px solid $sidebarGray;
   border-radius: 5px;
 }
