--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,14 +44,14 @@
       <div class="sidebar">
         <h2 class="sidebar-title">About The Girl</h2>
         <img class="author-pic"/>
-        <p class="sidebar-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in ultrices leo, at iaculis turpis. Vestibulum aliquam velit ut orci dignissim lacinia. Pellentesque sit amet rhoncus urna. Vestibulum id lobortis turpis, vel blandit diam. Donec accumsan fringilla nisi nec imperdiet. Vestibulum venenatis tellus aliquam posuere commodo.</p>
+        <p class="sidebar-text">This is Helen. She is learning how to code. She started this blog a couple months after making the rather daunting decision to switch careers from email marketing to programming. Sometimes learning to code is a total strugglefest, and so Helen made this blog to help make coding less of a strugglefest for others.</p>
       </div>
     
       <div class="sidebar">
         <h2 class="sidebar-title">Current Project</h2>
         <img class="project-pic"/>
         <h4><a href="/" target="_blank">Tic-Tac-Toe</a></h4>
-        <p class="sidebar-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <p class="sidebar-text">A tic-tac-toe web browser game built using Ruby. Courtersy of Flatiron's school's <a href="http://learn.co">free online course</a>.</p>
       </div>
     </div>
     {% include analytics.html %}
