--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
         <h2 class="sidebar-title">Current Project</h2>
         <img class="project-pic"/>
         <h4><a href="/" target="_blank">Tic-Tac-Toe</a></h4>
-        <p class="sidebar-text">A tic-tac-toe web browser game built using Ruby. Courtersy of Flatiron school's <a href="http://learn.co">free online course</a>.</p>
+        <p class="sidebar-text">A tic-tac-toe web browser game built using Ruby. Courtersy of Flatiron school's <a href="http://learn.co" target="_blank">free online course</a>.</p>
       </div>
     </div>
     {% include analytics.html %}
