--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
       <div class="sidebar">
         <h2 class="sidebar-title">About The Girl</h2>
         <img class="author-pic"/>
-        <p class="sidebar-text">This is Helen. She is learning how to code. She started <span class="title">Code Meets Girl</span> a couple months after making the rather daunting decision to switch careers from email marketing to programming. Sometimes learning to code is a total strugglefest, and so Helen made this blog to help make coding less of a strugglefest for others.</p>
+        <p class="sidebar-text">This is Helen. She is learning how to code. She started <em>Code Meets Girl</em> a couple months after making the rather daunting decision to switch careers from email marketing to programming. Sometimes learning to code is a total strugglefest, and so Helen made this blog to help make coding less of a strugglefest for others.</p>
       </div>
     
       <div class="sidebar">
