--- a/style.scss
+++ b/style.scss
@@ -70,7 +70,7 @@ padding: 0 30px;
   @include mobile {
     float: none;
     display: block;
-    margin: 10px auto;
+    margin: 0 auto;
   }
 }
 
