--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,6 +1,6 @@
 
 .highlight {
-  background-color: #9b9b9b;
+  background-color: #b9b9b9;
   padding: 7px 7px 7px 10px;
 //  border: 1px solid #ddd;
 //  -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
