--- a/style.scss
+++ b/style.scss
@@ -434,7 +434,7 @@ a.more-posts {
 
 /* Only provide a hover state for linked pagination items */
 a.pagination-item:hover {
-  background-color: $lightGray;
+  background-color: $gray;
   cursor: pointer;
 }
 
