--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
       <div class="sidebar">
         <h2 class="sidebar-title">Current Project</h2>
         <img class="project-pic"/>
-        <h4><a href="/" target="_blank">Tic-Tac-Toe</a></h4>
+        <h4><a href="https://github.com/learn-co-students/tic-tac-toe-rb-bootcamp-prep-000" target="_blank">Tic-Tac-Toe</a></h4>
         <p class="sidebar-text">A tic-tac-toe web browser game built using Ruby. Courtesy of Flatiron school's <a href="http://learn.co" target="_blank">free online course</a>.</p>
       </div>
     </div>
