--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,8 +50,8 @@
       <div class="sidebar">
         <h2 class="sidebar-title">Current Project</h2>
         <img class="project-pic"/>
-        <h4><a href="https://github.com/hliutongco/oo-tic-tac-toe-bootcamp-prep-000" target="_blank">Tic-Tac-Toe</a></h4>
-        <p class="sidebar-text">A CLI tic-tac-toe game built using Ruby. Courtesy of Flatiron school's <a href="http://learn.co" target="_blank">free online course</a>.</p>
+        <h4><a href="https://github.com/hliutongco/ruby-encryptor" target="_blank">Text Encryption/Decryption</a></h4>
+        <p class="sidebar-text">A CLI encryption/decryption program for files and real-time text. Courtesy of <a href="http://tutorials.jumpstartlab.com/projects/encryptor.html" target="_blank">Jumpstart Lab</a>.</p>
       </div>
     </div>
     {% include analytics.html %}
