--- a/style.scss
+++ b/style.scss
@@ -481,7 +481,7 @@ a.pagination-item:hover {
 }
 
 .project-pic {
-  content:url("http://hliutongco.github.io/images/tic_tac_toe.png");
+  content:url("http://hliutongco.github.io/images/encryption.png");
   display: block;
   margin: 0 auto;
   height: 250px;
